fixed alignment issues as well as iframe issue

--- a/static/calc/css/_rateAnalysis.scss
+++ b/static/calc/css/_rateAnalysis.scss
@@ -517,3 +517,13 @@
         }
     }
 }
+
+.django-plotly-dash.django-plotly-dash-iframe.django-plotly-dash-app-analysisapp.card > div {
+    padding-bottom: 80vh !important;
+}
+
+@media (max-width: 767px) {
+    #rateAnalysisHistory_wrapper {
+        width: auto;
+    }
+}
