--- a/static/calc/css/style.css
+++ b/static/calc/css/style.css
@@ -1391,6 +1391,16 @@ body.show::after {
   background: #dc3545 !important;
 }
 
+.django-plotly-dash.django-plotly-dash-iframe.django-plotly-dash-app-analysisapp.card > div {
+  padding-bottom: 80vh !important;
+}
+
+@media (max-width: 767px) {
+  #rateAnalysisHistory_wrapper {
+    width: auto;
+  }
+}
+
 /* ### Datatable Export css ### */
 div button.export {
   background: url("/static/calc/images/export.png");
